win font size fix for mobile, improvements to landscape on mobile

--- a/tictactoe.css
+++ b/tictactoe.css
@@ -8,23 +8,23 @@ html, body {
 }
 .grid {
 	display: none;
-	height: 92vh;
-	width: 66%;
+	height: 80vh;
+	width: 50%;
 	text-align: center;
 	margin: 0 auto;
 	background-color: black;
 }
 
 .row {
-	height: 30vh;
+	height: 26vh;
 	width: 100%;
 	display:inline-block;
 	margin: 0 auto;
 }
 
-@media (max-width: 768px) and (min-height: 552px){
+@media (max-width: 768px){
 .grid {
-	height: 63vh;
+	height: 80vh;
 	width:100%;
 	text-align: center;
 	
@@ -34,11 +34,30 @@ html, body {
 }
 
 .row {
-	height: 20vh;
+	height: 25vh;
 	width: 100%;
 	display:inline-block;
 	margin: 0 auto;
 }
+}
+
+@media (max-height: 552px){
+	.grid {
+		height: 100vh;
+		width:100%;
+		text-align: center;
+		
+		display: none;
+		background-color: black;
+	
+	}
+
+	.row {
+		height: 33vh;
+		width: 100%;
+		display:inline-block;
+		margin: 0 auto;
+	}
 }
 
 
@@ -60,8 +79,8 @@ html, body {
 .square {
 	background-color: black;	
 	color:white;
-	height: 30vh;
-	width: 32.6%;
+	height: 25vh;
+	width: 32%;
 	margin-left:0.025%;
 	margin-right:0.025%;
 	margin-bottom: 0.05%;
@@ -70,10 +89,10 @@ html, body {
 	border: solid 1px white;
 }
 
-@media (max-width: 768px) and (min-height: 552px){
+@media (max-width: 768px){
 	.square {
 		width: 32%;
-		height: 20vh;		
+		height: 24vh;		
 		margin-left:0.025%;
 		margin-right:0.025%;
 		margin-bottom: 0.025%;
@@ -81,6 +100,16 @@ html, body {
 	}
 }
 
+@media (max-height: 552px){
+	.square {
+		width: 32%;
+		height: 31.5vh;		
+		margin-left:0.025%;
+		margin-right:0.025%;
+		margin-bottom: 0.025%;
+		margin-top: 0.025%;
+	}
+}
 
 
 #selection {
